--- a/css/style_catalog.css
+++ b/css/style_catalog.css
@@ -1,9 +1,19 @@
+/*---------Ресеты----------*/
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+div {
+    margin: 0;
+    padding:0;
+}
+
 /*---------Семантика----------*/
 
 html {
     height: 100%;
 }
-
 
 body {
     display:flex;
@@ -44,7 +54,7 @@ footer {
 h1 {
     font-family: "Arial";
     font-size: 40px;
-    margin: 0px;
+    margin: 20px 0 30px 0 ;
     line-height: 40px;
 }
 
@@ -103,9 +113,13 @@ h1 {
     font-style: italic;
 }
 
+.desk {
+    padding-bottom: 20px;
+}
+
 .logo {
     font-size: 30px;
-    margin: 20px 0 0 30px;
+    margin: 20px 0 0 40px;
 }
 
 
@@ -114,6 +128,7 @@ h1 {
 
 .menu {
     border-bottom: solid #dcdcdc 2px;
+    padding: 15px 0 15px 0;
 }
 
 .menu p {
@@ -210,6 +225,10 @@ footer p {
         background: none;
     }
 
+    body    {
+        width: 100%;
+    }
+
     .logo {
         display: none;
     }
@@ -264,6 +283,10 @@ footer p {
     footer p {
         font-size: 27px;
         font-style: italic;
+    }
+
+    .menu {
+        margin: 20px 0 20px 0;
     }
 
     .menu p {
